dev/tests/cases/neg/26_fixed_global.tv
fixed limit: i64 = 10;

df main() -> void {
    limit = 20;
    echo!(limit);
}
